@@ -14,11 +14,6 @@
 	only on toplevel.  Alternantively everything should be latex/troffized
 	I suppose.  I like the first alternative more though.
 
-*	Copy/Cut/Paste menu
-
-*	Make README into a simple document to show on help, probably html
-	and show in a browser.
-
 *	Better yet help support, should be easy to document new functions
 
 *	Native polynomial operation
