@@ -514,3 +514,4 @@ Numerator (3i/7)						3i
 Numerator (3i/7+1)						7+3i
 Denominator (3i/7)						7
 Denominator (3i/7+1)						7
+(64^(1/2))/7							1 1/7
