@@ -13,6 +13,9 @@ Changes to 0.5.3
 * Better EulerPhi implementation
 * Fix Factors
 * Allow more matlab like notation of printing whole rows (such as foo@(2:))
+* Rational powers with denominators of 2, 4, 8 or 16 now return integers
+  if possible
+* Add an Edit menu with Copy and Paste
 * Fix precedence of : to be lower then that of standard arithmetic operators
 
 Changes to 0.5.2
