@@ -1,3 +1,11 @@
+Wed Feb 19 09:54:03 2003  George Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: add Edit menu with Copy and Paste.
+
+	* src/mpwrap.c: minor fix for rational power, and do possibly 
+	  symbolic square root in case the denominator is 2, 4, 8 or 16
+	  (should do more perhaps)
+
 Sun Feb 16 11:06:50 2003  George Lebl <jirka@5z.com>
 
 	* src/mpwrap.[ch], src/eval.c, lib/number_theory/misc.gel:
